--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "@mantine/modals": "^7.17.2",
     "@mantine/notifications": "^7.17.2",
     "@supabase/supabase-js": "^2.49.1",
+    "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "5.45.1",
     "connectkit": "^1.8.2",
     "dayjs": "^1.11.13",
