--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn indexer/index.ts",
     "test": "jest",
-    "functions:deploy": "npx supabase functions deploy",
-    "deploy:factory": "npx hardhat clean && npx hardhat compile && npx hardhat ignition deploy ./ignition/modules/NFTFactory.ts"
+    "functions:deploy": "npx supabase functions deploy"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.1",
