--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -7,7 +7,8 @@
     "compile": "npx hardhat compile",
     "deploy:lock": "npx hardhat ignition deploy ./ignition/modules/Lock.ts --network localhost",
     "deploy:nft": "npx hardhat ignition deploy ./ignition/modules/NFT.ts --network localhost",
-    "deploy:nftFactory": "npx hardhat ignition deploy ./ignition/modules/NFTFactory.ts --network localhost"
+    "deploy:nftFactory": "npx hardhat ignition deploy ./ignition/modules/NFTFactory.ts --network localhost",
+    "deploy:factory": "npx hardhat clean && npx hardhat compile && npx hardhat ignition deploy ./ignition/modules/NFTFactory.ts"
   },
   "keywords": [],
   "author": "",
