--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -8,7 +8,8 @@
     "deploy:lock": "npx hardhat ignition deploy ./ignition/modules/Lock.ts --network localhost",
     "deploy:nft": "npx hardhat ignition deploy ./ignition/modules/NFT.ts --network localhost",
     "deploy:nftFactory": "npx hardhat ignition deploy ./ignition/modules/NFTFactory.ts --network localhost",
-    "deploy:factory": "npx hardhat clean && npx hardhat compile && npx hardhat ignition deploy ./ignition/modules/NFTFactory.ts"
+    "deploy:factory:base": "npx hardhat clean && npx hardhat compile && npx hardhat ignition deploy ./ignition/modules/NFTFactory.ts",
+    "deploy:auction:base": "npx hardhat clean && npx hardhat compile && npx hardhat ignition deploy ./ignition/modules/EnglishAuction.ts"
   },
   "keywords": [],
   "author": "",
