--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,6 +9,6 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
+  "include": ["indexer/**/*"],
   "exclude": ["node_modules", "**/*.test.ts"]
 }
