--- a/web/.env.local.example
+++ b/web/.env.local.example
@@ -2,9 +2,13 @@ VITE_WC_PROJECT_ID=
 VITE_ALCHEMY_API_KEY=
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
-VITE_PINATA_BASE_URL=
 
-#BASE SEPOLIA CONTRACTS
+# PINATA
+VITE_PINATA_BASE_URL=
+VITE_PINATA_JWT=
+VITE_GATEWAY_URL=
+
+# CONTRACTS
 VITE_NFT_FACTORY_CONTRACT=
 VITE_ENGLISH_AUCTION_CONTRACT=
 
