README setup instructions improvements

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - RPC_URL=${RPC_URL}
       - SUPABASE_URL=${SUPABASE_URL}
-      - SUPABASE_KEY=${SUPABASE_KEY}
+      - SUPABASE_SERVICE_KEY=${SUPABASE_SERVICE_KEY}
       - NFT_FACTORY_ADDRESS=${NFT_FACTORY_ADDRESS}
       - START_BLOCK=${START_BLOCK}
       - ENGLISH_AUCTION_ADDRESS=${ENGLISH_AUCTION_ADDRESS}
